<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_welcome"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/welcome"/>

        <item
            android:id="@+id/nav_game"
            android:icon="@drawable/baseline_games_24"
            android:title="@string/game"/>

        <item
            android:id="@+id/nav_high_scores"
            android:icon="@drawable/baseline_scoreboard_24"
            android:title="@string/high_scores"/>

    </group>
    <item
        android:title="">

        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/baseline_exit_to_app_24"
                android:title="@string/logout"/>
        </menu>

    </item>

</menu>