<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HighScoresFragment">

    <TextView
        android:id="@+id/name3"
        android:layout_width="164dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="62dp"
        android:layout_marginTop="238dp"
        android:layout_marginEnd="185dp"
        android:text="@string/name_3"
        android:textColor="@color/lavender"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/rank3"
        android:layout_width="36dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="238dp"
        android:layout_marginEnd="349dp"
        android:text="3."
        android:textColor="@color/lavender"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/score3"
        android:layout_width="164dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="227dp"
        android:layout_marginTop="238dp"
        android:layout_marginEnd="20dp"
        android:text="@string/score_3"
        android:textColor="@color/lavender"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/name2"
        android:layout_width="164dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="62dp"
        android:layout_marginTop="198dp"
        android:layout_marginEnd="185dp"
        android:text="@string/name_2"
        android:textColor="@color/lavender"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/rank2"
        android:layout_width="36dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="198dp"
        android:layout_marginEnd="349dp"
        android:text="2."
        android:textColor="@color/lavender"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/score2"
        android:layout_width="164dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="227dp"
        android:layout_marginTop="198dp"
        android:layout_marginEnd="20dp"
        android:text="@string/score_2"
        android:textColor="@color/lavender"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/score1"
        android:layout_width="164dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="227dp"
        android:layout_marginTop="159dp"
        android:layout_marginEnd="20dp"
        android:text="@string/score_1"
        android:textColor="@color/lavender"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/name1"
        android:layout_width="164dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="62dp"
        android:layout_marginTop="159dp"
        android:layout_marginEnd="185dp"
        android:text="@string/name_1"
        android:textColor="@color/lavender"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/rank1"
        android:layout_width="36dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="159dp"
        android:layout_marginEnd="349dp"
        android:text="1."
        android:textColor="@color/lavender"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txtScoreBoard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:text="@string/score_board"
        android:textColor="@color/lavender"
        android:textSize="35sp"
        android:textStyle="bold" />


</RelativeLayout>